tests/errors/no_arg_func.c
#include "head.h"

extern void test0(long);

int main(void) {
  // and invoke the function written in the vector language
  // and read values from c
  
  // test 0
  test0(NUM);
  printf("\n");
  
  return 0;
}
